--- a/metadata/com/kingdee/eas/fdc/sellhouse/client/BuildingNewEditUI.ui
+++ b/metadata/com/kingdee/eas/fdc/sellhouse/client/BuildingNewEditUI.ui
@@ -780,7 +780,7 @@
             <userDefined>false</userDefined>
             <classType>com.kingdee.bos.ctrl.swing.KDLabelContainer</classType>
             <isContainer>true</isContainer>
-            <constraints>341,186,270,19</constraints>
+            <constraints>532,223,270,19</constraints>
             <tabIndex>0</tabIndex>
             <herited>false</herited>
             <bimUIObjectPK />
@@ -1053,7 +1053,7 @@
             <userDefined>false</userDefined>
             <classType>com.kingdee.bos.ctrl.swing.KDCheckBox</classType>
             <isContainer>false</isContainer>
-            <constraints>7,217,169,19</constraints>
+            <constraints>259,240,169,19</constraints>
             <tabIndex>0</tabIndex>
             <herited>false</herited>
             <bimUIObjectPK />
@@ -1396,7 +1396,7 @@
             <userDefined>true</userDefined>
             <classType>com.kingdee.bos.ctrl.swing.KDCheckBox</classType>
             <isContainer>false</isContainer>
-            <constraints>341,217,140,19</constraints>
+            <constraints>341,186,140,19</constraints>
             <tabIndex>0</tabIndex>
             <herited>false</herited>
             <bimUIObjectPK />
@@ -1411,6 +1411,48 @@
                     <type>java.lang.String</type>
                     <value>uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[kdChIsReturn].properties.property[text].value</value>
                     <isMultiLan>true</isMultiLan>
+                    <userDefined>true</userDefined>
+                </property>
+            </properties>
+            <parent>
+                <key name="name" value="tabBuildingInfo" />
+            </parent>
+        </component>
+        <component>
+            <name>contDoProperty</name>
+            <alias>uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[contDoProperty].alias</alias>
+            <userDefined>true</userDefined>
+            <classType>com.kingdee.bos.ctrl.swing.KDLabelContainer</classType>
+            <isContainer>true</isContainer>
+            <constraints>7,208,270,19</constraints>
+            <tabIndex>0</tabIndex>
+            <herited>false</herited>
+            <bimUIObjectPK />
+            <layoutInfo>
+                <name />
+                <type>LabelContainerLayout</type>
+                <value />
+            </layoutInfo>
+            <properties>
+                <property>
+                    <name>boundLabelText</name>
+                    <type>java.lang.String</type>
+                    <value>uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[contDoProperty].properties.property[boundLabelText].value</value>
+                    <isMultiLan>true</isMultiLan>
+                    <userDefined>true</userDefined>
+                </property>
+                <property>
+                    <name>boundLabelLength</name>
+                    <type>int</type>
+                    <value>uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[contDoProperty].properties.property[boundLabelLength].value</value>
+                    <isMultiLan>false</isMultiLan>
+                    <userDefined>true</userDefined>
+                </property>
+                <property>
+                    <name>boundLabelUnderline</name>
+                    <type>boolean</type>
+                    <value>uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[contDoProperty].properties.property[boundLabelUnderline].value</value>
+                    <isMultiLan>false</isMultiLan>
                     <userDefined>true</userDefined>
                 </property>
             </properties>
@@ -2233,6 +2275,41 @@
             </parent>
         </component>
         <component>
+            <name>cbDoProperty</name>
+            <alias>uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[cbDoProperty].alias</alias>
+            <userDefined>true</userDefined>
+            <classType>com.kingdee.bos.ctrl.swing.KDComboBox</classType>
+            <isContainer>false</isContainer>
+            <constraints>7</constraints>
+            <tabIndex>0</tabIndex>
+            <herited>false</herited>
+            <bimUIObjectPK />
+            <layoutInfo>
+                <name />
+                <type>XYLayout</type>
+                <value />
+            </layoutInfo>
+            <properties>
+                <property>
+                    <name>items</name>
+                    <type>java.lang.String</type>
+                    <value>uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[cbDoProperty].properties.property[items].value</value>
+                    <isMultiLan>true</isMultiLan>
+                    <userDefined>true</userDefined>
+                </property>
+                <property>
+                    <name>required</name>
+                    <type>boolean</type>
+                    <value>uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[cbDoProperty].properties.property[required].value</value>
+                    <isMultiLan>false</isMultiLan>
+                    <userDefined>true</userDefined>
+                </property>
+            </properties>
+            <parent>
+                <key name="name" value="contDoProperty" />
+            </parent>
+        </component>
+        <component>
             <name>btnCopy</name>
             <alias>uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[btnCopy].alias</alias>
             <userDefined>false</userDefined>
@@ -2296,6 +2373,24 @@
             <lang locale="zh_CN" value="false" />
             <lang locale="zh_HK" value="false" />
             <lang locale="zh_TW" value="false" />
+        </rs>
+        <rs key="uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[cbDoProperty].alias">
+            <lang locale="en_US" value="null" />
+            <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
+            <lang locale="zh_TW" value="null" />
+        </rs>
+        <rs key="uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[cbDoProperty].properties.property[items].value">
+            <lang locale="en_US" value="null" />
+            <lang locale="zh_CN" value="[Enum]com.kingdee.eas.fdc.sellhouse.DoPropertyEnum" />
+            <lang locale="zh_HK" value="[Enum]com.kingdee.eas.fdc.sellhouse.DoPropertyEnum" />
+            <lang locale="zh_TW" value="[Enum]com.kingdee.eas.fdc.sellhouse.DoPropertyEnum" />
+        </rs>
+        <rs key="uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[cbDoProperty].properties.property[required].value">
+            <lang locale="en_US" value="true" />
+            <lang locale="zh_CN" value="true" />
+            <lang locale="zh_HK" value="true" />
+            <lang locale="zh_TW" value="true" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[comboBuildingStructure].alias">
             <lang locale="en_US" value="null" />
@@ -2590,6 +2685,30 @@
             <lang locale="zh_CN" value="false" />
             <lang locale="zh_HK" value="false" />
             <lang locale="zh_TW" value="false" />
+        </rs>
+        <rs key="uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[contDoProperty].alias">
+            <lang locale="en_US" value="null" />
+            <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
+            <lang locale="zh_TW" value="null" />
+        </rs>
+        <rs key="uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[contDoProperty].properties.property[boundLabelLength].value">
+            <lang locale="en_US" value="100" />
+            <lang locale="zh_CN" value="100" />
+            <lang locale="zh_HK" value="100" />
+            <lang locale="zh_TW" value="100" />
+        </rs>
+        <rs key="uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[contDoProperty].properties.property[boundLabelText].value">
+            <lang locale="en_US" value="null" />
+            <lang locale="zh_CN" value="操盘属性" />
+            <lang locale="zh_HK" value="操盤屬性" />
+            <lang locale="zh_TW" value="操盤屬性" />
+        </rs>
+        <rs key="uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[contDoProperty].properties.property[boundLabelUnderline].value">
+            <lang locale="en_US" value="true" />
+            <lang locale="zh_CN" value="true" />
+            <lang locale="zh_HK" value="true" />
+            <lang locale="zh_TW" value="true" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.sellhouse.client.BuildingNewEditUI].components.component[contFloorCount].alias">
             <lang locale="en_US" value="null" />
